# unisync

./: .gitignore  .metadata  README.md  analysis_options.yaml  fedora_deps.sh  linux_dependencies.sh  pubspec.yaml  ubuntu_deps.sh
android/: build.gradle
android/app/: build.gradle  google-services.json
assets/avahi_dbus/: org.freedesktop.Avahi.AddressResolver.xml  org.freedesktop.Avahi.HostNameResolver.xml  org.freedesktop.Avahi.RecordBrowser.xml  org.freedesktop.Avahi.Server2.xml
assets/colors/: colors.json
assets/scripts/: setup_ssh.sh
assets/translations/: en-US.json
diagrams/: convert.sh  unisync.vpp  unisync.vpp.bak_000f  unisync.vpp.bak_001d  unisync.vpp.bak_002d  unisync.vpp.bak_003d  unisync.vpp.bak_004d  unisync.vpp.bak_005d  unisync.vpp.bak_006d  unisync.vpp.bak_007d  unisync.vpp.bak_008d  unisync.vpp.bak_009d  unisync.vpp.bak_010d  unisync.vpp.bak_011d  unisync.vpp.bak_012d  unisync.vpp.bak_013d  unisync.vpp.bak_014d  unisync.vpp.bak_015d  unisync.vpp.bak_016d  unisync.vpp.bak_017d  unisync.vpp.bak_018d  unisync.vpp.bak_019d  unisync.vpp.bak_020d  unisync.vpp.bak_021d  unisync.vpp.bak_022d  unisync.vpp.bak_023d  unisync.vpp.bak_024d  unisync.vpp.bak_025d  unisync.vpp.bak_026d  unisync.vpp.bak_027d  unisync.vpp.bak_028d  unisync.vpp.bak_029d  unisync.vpp.bak_030d  unisync.vpp.bak_031f  unisync.vpp.bak_032d  unisync.vpp.bak_033d  unisync.vpp.bak_034d  unisync.vpp.bak_035d  unisync.vpp.bak_036d  unisync.vpp.bak_037d  (+66 more)
lib/: main.dart  main_app.dart  main_process.dart  mdns_plugin.dart
lib/avahi/: address_resolver.dart  domain_browser.dart  hostname_resolver.dart  record_browser.dart  (+5 more)
linux/: CMakeLists.txt  my_application.cc
test/: widget_test.dart
unisync_android/: build.gradle  gradle.properties  settings.gradle
unisync_backend/: .metadata  pubspec.yaml
unisync_linux/: CMakeLists.txt  test.dart
unisync_linux/include/: dbus-iface-device.h  device-info.h  device-message.h  device.h  json-util.h  mdns.h  plugin-base.h  socket-util.h  socket.h  unisync-process.h
unisync_linux/res/: main.xml
unisync_linux/res/dbus/: run-codegen.sh
unisync_linux/res/dbus/v1/: com.anhquan.UnisyncDbus.Device.xml
unisync_linux/src/: main.c
unisync_linux/src/core/: mdns.c  socket.c  unisync-process.c
unisync_linux/src/dbus/: dbus-iface-device.c
unisync_linux/src/model/: device-info.c  device-message.c
unisync_linux/src/utils/: json-util.c  socket-util.c
windows/: CMakeLists.txt
(+477 files in other folders)
